descriptors/gitlab/gitlab-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlab-server
  name: gitlab-server
  namespace: gitlab
spec:
  ports:
    - name: http-rest
      port: 80
      protocol: TCP
      targetPort: 80
    - name: https-rest
      port: 443
      protocol: TCP
      targetPort: 443
  selector:
    app: gitlab-server
  sessionAffinity: None
  type: ClusterIP
