descriptors/gitlab/gitlab-ingress(extensions-v1beta1).yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: gitlab-server
  namespace: gitlab
spec:
  rules:
    - host: gitlab.console.klovercloud.io
      http:
        paths:
          - backend:
              serviceName: gitlab-server
              servicePort: 443
            path: /
# tls:
# - hosts:
#   - gitlab.eks.hkmd7dff3.klovercloud.io
#   secretName: wild-cert-secret
