descriptors/gitlab/gitlab-ingress(networking.k8s.io-v1).yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: gitlab-server
  namespace: gitlab
spec:
  rules:
    - host: gitlab.console.klovercloud.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gitlab-server
                port:
                  number: 443
#  tls:
#    - hosts:
#        - keycloak.eks.hkmd7dff3.klovercloud.io
#      secretName: wild-cert-secret
